--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "@splidejs/vue-splide": "^0.3.5",
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-slick-carousel": "^1.0.6",
+    "vueperslides": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
