--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^5.2.4",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1"
   },
   "eslintConfig": {
     "root": true,
