--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^1.1.5",
     "@popperjs/core": "^2.9.2",
     "@splidejs/vue-splide": "^0.3.5",
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
-    "vue": "^3.0.0",
+    "vue": "^3.0.11",
     "vue-router": "^4.0.0-0",
     "vue-slick-carousel": "^1.0.6",
+    "vue3-clock-countdown": "0.0.5",
     "vueperslides": "^3.3.0"
   },
   "devDependencies": {
